車款整理、租車企業管理頁面調整、車款detail

--- a/src/main/resources/static/css/util.css
+++ b/src/main/resources/static/css/util.css
@@ -17874,9 +17874,15 @@ iframe {
 	text-align: right;
 }
 
+.txt-justify{
+	text-align: justify;
+}
+
 .txt-middle {
 	vertical-align: middle;
 }
+
+
 
 
 
