--- a/src/main/resources/templates/frontend/index.html
+++ b/src/main/resources/templates/frontend/index.html
@@ -915,7 +915,6 @@
 
 			<div class="wrap-slick2 p-b-50">
 				<div id="carRental" class="slick2 isotope-grid">
-					<!-- <div class="row isotope-grid p-b-50"> -->
 					<!-- Block2 -->
 					<div th:each="car:${cars}" class="item-slick2 col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item suv">
 						<div class="block2">
@@ -942,8 +941,8 @@
 
 								<div class="block2-txt-child2 flex-r p-t-3">
 									<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-										<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-										<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
+										<img class="icon-heart1 dis-block trans-04" th:src="@{/images/icons/icon-heart-01.png}" alt="ICON">
+										<img class="icon-heart2 dis-block trans-04 ab-t-l" th:src="@{/images/icons/icon-heart-02.png}" alt="ICON">
 									</a>
 								</div>
 							</div>
