--- a/src/main/resources/templates/frontend/car/car-model.html
+++ b/src/main/resources/templates/frontend/car/car-model.html
@@ -55,7 +55,7 @@
 							<div class="row">
 								<div class="col-sm-4">
 									<div class="px-3 pos-relative hov-img0 card-img-left" style="height: 180px">
-										<img th:src="@{${car.image}}" class="mt-4 pt-3" alt="IMG-CAR">
+										<img th:src="@{${car.image}}" class="mt-2" alt="IMG-CAR">
 									</div>
 								</div>
 								<div class="col-sm-8 card-body block2-txt flex-w flex-t p-t-14">
