--- a/src/main/resources/templates/frontend/car/vendor-location.html
+++ b/src/main/resources/templates/frontend/car/vendor-location.html
@@ -54,6 +54,7 @@
 											<th scope="col" class="text-center">縣市</th>
 											<th scope="col" class="text-center">地區</th>
 											<th scope="col" class="text-center">地址</th>
+											<th scope="col" class="text-center">狀態</th>
 											<!-- 											<th scope="col">電話</th> -->
 											<!-- 											<th scope="col">營業時間</th> -->
 											<th scope="col" class="text-center">車款數</th>
@@ -65,10 +66,17 @@
 											class="odd gradeX" scope="row">
 											<td th:text="${locationStat.index+1}" class="cl4"></td>
 											<td th:text="${location.id}"></td>
-											<td th:text="${location.name}"></td>
-											<td th:text="${location.county}"></td>
-											<td th:text="${location.district}"></td>
-											<td th:text="${location.address}"></td>
+											<td th:text="${location.name}" class="px-0"></td>
+											<td th:text="${location.county}" class="px-0"></td>
+											<td th:text="${location.district}" class="px-0"></td>
+											<td th:text="${location.address}" class="px-0"></td>
+											<td>
+												<span th:text="${location.status}" class="btn btn-success btn-sm status"></span>
+<!-- 											<select name="carModel" class="form-control"> -->
+<!-- 												<option value="0">select option</option> -->
+<!-- 												<option th:each="carModel : ${carModels}" th:value="${carModel.id}" th:text="${carModel.makeCh + carModel.makeEn + carModel.model}"></option> -->
+<!-- 											</select> -->
+											</td>
 											<!-- 											<td th:text="${location.phone}"></td> -->
 											<!-- 											<td th:text="${#strings.substring(location.openTime,0,5) + ' ~ ' + #strings.substring(location.closeTime,0,5)}"></td> -->
 											<td>
@@ -121,63 +129,9 @@
 			                    <img class="img-responsive my-4" alt="image" width="100%" height="auto" id="locationImage" src="/"/>
 			                </div>
 
-
-				
-<!-- 				<div class="col-md-4 p-b-30"> -->
-<!-- 					<div class="card"> -->
-<!-- 						<div class="card-body"> -->
-<!-- 							<del><span class="cl3" th:text="'TWD $' + ${option.price}"></span></del> -->
-<!-- 							<span class="clblack mtext-109" th:text="'TWD $' + ${option.priceSale}"></span> -->
-<!-- 						</div> -->
-<!-- 						<div class="card-body p-t-33"> -->
-<!-- 							<div class="row m-b-10"> -->
-<!-- 								<div class="col-3"> -->
-<!-- 									<p class="d-flex justify-content-center p-t-8"> -->
-<!-- 										日期 -->
-<!-- 									</p> -->
-<!-- 								</div> -->
-
-<!-- 								<div class="col-9 respon6-next"> -->
-<!-- 									<div class="rs1-select2 bor8 bg0"> -->
-<!-- 										<input type="date" name="date" class="form-control"> -->
-<!-- 										<div class="dropDownSelect2"></div> -->
-<!-- 									</div> -->
-<!-- 								</div> -->
-<!-- 							</div> -->
-
-<!-- 							<div class="row p-b-10"> -->
-<!-- 								<div class="col-3"> -->
-<!-- 									<p class="dis-inline-block align-middle p-t-20 d-flex justify-content-center"> -->
-<!-- 										數量 -->
-<!-- 									</p> -->
-<!-- 								</div> -->
-<!-- 								<div class="col-9 "> -->
-<!-- 									<div class="wrap-num-product flex-w m-r-20 m-tb-10"> -->
-<!-- 										<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m"> -->
-<!-- 											<i class="fs-16 zmdi zmdi-minus"></i> -->
-<!-- 										</div> -->
-<!-- 										<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product" value="1"> -->
-<!-- 										<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m"> -->
-<!-- 											<i class="fs-16 zmdi zmdi-plus"></i> -->
-<!-- 										</div> -->
-<!-- 									</div> -->
-
-<!-- 								</div> -->
-<!-- 							</div> -->
-<!-- 							<button	class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 m-t-20 p-lr-15 trans-04 js-addcart-detail"> -->
-<!-- 								加入購物車 -->
-<!-- 							</button> -->
-<!-- 						</div> -->
-<!-- 					</div> -->
-<!-- 				</div> -->
-
-
-
-
 			                <div class="col-md-8 col-lg-7 p-b-30">
 			                    <div class="p-r-50 p-t-5 p-lr-0-lg">
 			                        <h4 id="locationName" class="mtext-105 cl2 js-name-detail p-b-14 font-weight-bold"></h4>
-<!-- 									<h4 class="ltext-102 font-weight-bold cl2 js-name-detail p-b-14"></h4> -->
 									<div class="p-b-10">
 										<div class="rating-count" value="carRental">
 											尚無評論
@@ -188,7 +142,6 @@
 										</div>
 										<p id="locationAddress" ></p>
 									</div>
-			
 			
 			                        <!--  -->
 			                        <div class="flex-w flex-m p-l-100 p-t-40 respon7">
@@ -243,6 +196,13 @@
 		    $('#data-table').DataTable({
  
 	  		})
+	  		
+	  		
+	  		if ($('.status').val() == '隱藏') {
+	  			console.log(123)
+	  			$(this).removeClass('btn-success').addClass('btn-warning')
+	  		}
+	  		
 		});
 	  
 // 		$('#data-table tbody').on('click', function () {
