--- a/src/main/resources/templates/frontend/car/vendor-opt-form.html
+++ b/src/main/resources/templates/frontend/car/vendor-opt-form.html
@@ -73,7 +73,7 @@
 										<div class="col-lg-5">
 											<img th:src="@{*{carOptions[__${optionStat.index}__].carModel.image}}">
 										</div>
-										<div class="col-lg-3">
+										<div class="col-lg-3 pt-4">
 											<p> <i class="zmdi zmdi-flash"></i>&nbsp;&nbsp;
 												<span th:text="*{carOptions[__${optionStat.index}__].carModel.power}"></span>
 											</p>
