--- a/src/main/resources/templates/frontend/hotel/hotel-roomList.html
+++ b/src/main/resources/templates/frontend/hotel/hotel-roomList.html
@@ -87,14 +87,13 @@
                                     <td th:text="${roomList.hotelArea}"></td>
                                     <td th:text="${roomList.roomtype}"></td>
                                     <td th:text="${roomList.roomprice}"></td>
-                                    <td> 修改</td>
-                                    <td> 刪除</td>
+
                                     <th>
-                                        <a class="btn1" th:href="@{/addHotelRoom(id=${hotel.id})}">新增房間</a>
+                                        <a class="btn1" th:href="@{/}">編輯房間</a>
 
                                     </th>
                                     <th>
-                                        <a class="btn1" th:href="@{/getHotelRoom(id=${hotel.id})}">查看房間</a>
+                                        <a class="btn1" th:href="@{/}">刪除房間</a>
 
                                     </th>
 
