--- a/src/main/resources/templates/frontend/partials/fragment.html
+++ b/src/main/resources/templates/frontend/partials/fragment.html
@@ -94,15 +94,10 @@
                     <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search">
                         <i class="zmdi zmdi-search"></i>
                     </div>
-<<<<<<< HEAD
-                 <a href="/gotrip/showCart"><div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
-                         data-notify="0" id="cartIcon">
-=======
                     <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart"
                          data-notify="2" >
->>>>>>> 70e5134d50c332bca05df2d97f350a310bd918de
                         <i class="zmdi zmdi-shopping-cart"></i>
-                    </div></a> 
+                    </div>
 
                     <a href="#"
                        class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
@@ -110,7 +105,7 @@
                         <i class="zmdi zmdi-favorite-outline"></i>
                     </a>
                     <!-- 						<a th:href="@{/login} @{/backend/index}" -->
-                    <div class="account p-t-22">
+                    <div class="account p-t-22" sec:authorize="!isAuthenticated()">
                         <a th:href="@{/login}"
                            class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
                            data-notify="0" >
