透過會員 找 飯店 在找 房間 ＋圖片ok 剩餘編輯 刪除 新增

--- a/src/main/resources/templates/backend/hotel/hotelIndex.html
+++ b/src/main/resources/templates/backend/hotel/hotelIndex.html
@@ -75,8 +75,8 @@
                                             <!--                                            </a></td>-->
                                             <!--                        <td><img width='60' height='72' th:src="@{/Goods/picture(id=${good.id})}"></td>-->
                                             <td>
-                                                <div th:each="image:${hotel.images}" class="d-inline-block">
-                                                    <img th:src="@{${image.imagePath}}" class="rounded img-com"
+                                                <div th:each="image3:${hotel.images}" class="d-inline-block">
+                                                    <img th:src="@{${image3.imagePath}}" class="rounded img-com"
                                                          width="60" height="72" style="display: inline-flex"/>
                                                 </div>
                                             </td>
