before test add / remove item from list

--- a/src/main/resources/templates/backend/car/car-model.html
+++ b/src/main/resources/templates/backend/car/car-model.html
@@ -86,11 +86,11 @@
 																修改
 															</button>
 														</form>
-														<form th:id="'deleteComment' + ${car.id}" th:action="@{/backend/cars/}+${car.id}" th:method="delete" class="inline-block">
-															<button type="button" th:value="${car.id}" class="px-2 btn btn-delete btn-info btn-rounded btn-sm">
-																刪除
-															</button>
-														</form>
+<!-- 														<form th:id="'deleteComment' + ${car.id}" th:action="@{/backend/cars/}+${car.id}" th:method="delete" class="inline-block"> -->
+<!-- 															<button type="button" th:value="${car.id}" class="px-2 btn btn-delete btn-info btn-rounded btn-sm"> -->
+<!-- 																刪除 -->
+<!-- 															</button> -->
+<!-- 														</form> -->
 													</td>
 												</tr>
 											</tbody>
